--- a/week 3/Assignment/starter_code/css/style.css
+++ b/week 3/Assignment/starter_code/css/style.css
@@ -1,35 +1,49 @@
+/* Box Model Hack */
 * {
-  -moz-box-sizing: border-box; /* Firexfox */
-  -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
-  box-sizing: border-box; /* IE */
+     -moz-box-sizing: border-box; /* Firexfox */
+     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
+     box-sizing: border-box; /* IE */
 }
 
 /* Clear fix hack */
 .clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
+     content: ".";
+     display: block;
+     clear: both;
+     visibility: hidden;
+     line-height: 0;
+     height: 0;
 }
 
 body {
   font-size: 26px;
   line-height: 1.4;
   color: #606161;
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica;
   font-weight: 300;
   background: #f0efef;
 }
-a {
-  text-decoration: none;
+
+header {
+  background: #033048;
+  padding: 25px 0;
+  overflow: hidden;
+  }
+
+header .logo {
+  color: #fff;
+  float: left;
 }
 
-/* Center the container */
-.container {
-  max-width: 980px;
-  margin: 0 auto;
+header nav {
+  float: right;
+  margin-top: 15px;
+}
+
+header nav ul li {
+  display: inline-block;
+  margin: 0 0 0 40px;
+  font-size: 24px;
 }
 
 .logo {
@@ -37,87 +51,42 @@ a {
   font-weight: 800;
 }
 
-header {
-  background: #033048;
-  padding: 25px 0;
-  overflow: hidden;
-}
-header > .container {
-  display:flex;
-}
-header .logo {
-  color: #fff;
-  display:inline-block;
+.head {
+	width: 980px;
+	margin: 0 auto;
 }
 
-header nav {
-  margin-top: 15px;
-}
-header nav ul li {
-  display: inline-block;
-  margin: 0 0 0 40px;
-  font-size: 24px;
-}
 header nav ul li a {
-  color: #f9e42e;
-}
-#main {
-  margin-top: 80px;
+	color: #f9e42e;
 }
 
-#main > .container {
-  display:flex;
-}
-#posts {
-  flex-basis: 700px;
-  min-width:320px;
+.container {
+  width: 980px;
+  margin: 0 auto;
+
+  }
+
+  .posts {
+  width: 700px;
+  display: inline-block;
   margin-right: 20px;
   vertical-align: top;
 }
-#sidebar {
-  flex-basis: 240px;
+
+#side {
+  width: 240px;
+  display: inline-block;
   vertical-align: top;
 }
-.post {
-  border-bottom: 1px solid #043049;
-  padding-bottom: 40px;
-  margin-bottom: 40px;
-}
-.post-title {
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 1.3;
-  margin-bottom: 30px;
-}
-.post-title a {
-  color: #043049;
-}
 
-.post img {
-  margin-bottom: 30px;
-  max-width: 100%;
+.btn-cta {
+  background: #f9e42e;
+  color: #033048;
 }
-.post p {
+.btn-signup {
+  background: #033048;
+  color: #fff;
   font-size: 24px;
-  line-height: 1.333;
-  color: #606161;
-}
-.post p:first-of-type:first-letter {
-  float: left;
-  font-size: 80px;
-  line-height: 65px;
-  padding-top: 4px;
-  padding-right: 8px;
-  padding-left: 3px;
-  font-weight: 600;
-}
-.readmore {
-  text-align: right;
-  margin-top: 30px;
-}
-.readmore a {
-  color: #043049;
-  font-weight: 600;
 }
 
 .btn {
@@ -129,48 +98,16 @@ header nav ul li a {
   text-align: center;
   display: block;
   margin: 0 auto;
-}
-.btn-cta {
-  background: #f9e42e;
-  color: #033048;
-}
-.btn-signup {
-  background: #033048;
-  color: #fff;
-  font-size: 24px;
-}
+  }
 
-#sidebar h1 {
-  font-size: 32px;
-  font-weight: 800;
-  margin-bottom: 15px;
-  color: #043049;
-}
-#sidebar ul {
-  margin-bottom: 40px;
-}
-#sidebar ul li a {
-  color: #043049;
-  font-size: 24px;
-}
-#sidebar p {
-  font-size: 22px;
-  line-height: 1.1;
-  margin-bottom: 40px;
-}
-#sidebar p a {
-  color: #043049;
-  font-weight: 600;
-}
-
-#bottom-cta {
+  #bottom-cta {
   background: #f9e42e;
   padding: 30px;
   text-align: center;
   margin-top: 50px;
 }
 
-footer {
+  footer {
   background: #121212;
   padding: 65px 0 45px;
   text-align: center;
@@ -188,4 +125,46 @@ footer p {
   font-size: 18px;
   color: #fff;
   font-weight: 600;
+
+}
+
+a {
+	text-decoration: none;
+}
+
+.readmore {
+  text-align: right;
+  margin-top: 30px;
+}
+
+.post{
+	border-bottom: 1px solid black;
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+}
+
+#side section nav ul li a {
+	color: #606161;
+
+}
+
+#side section nav ul li  {
+	list-style: none;
+}
+
+
+
+.readmore a {
+	font-weight: 600;
+	color:#606161;
+}
+
+#side h1{
+	font-weight: 600;
+	
+}
+
+h1 {
+	color:#033048;
+	font-size: 30px;
 }
